# osrm-backend

./: .babelrc  .clang-format  .clang-tidy  .clangd  .cncc.style  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .gitmodules  .npmignore  .pre-commit-config.yaml  .prettierrc  .sccacheconfig  .travis.yml  .ycm_extra_conf.py  AGENT.md  AGENTS.md  AUTHORS.TXT  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Doxyfile.in  EXTERNAL_LICENSES.txt  FUZZING.md  Gemfile  Jamroot  LICENCE.TXT  LICENSE  LICENSE.TXT  Makefile  NOTES_FOR_DEVELOPERS.md  OSRM_config.h.in  (+78 more)
bindings/node/: CMakeLists.txt
example/: CMakeLists.txt  README.md  compile.sh  example.cpp  example.js  example.ts  isochrone-viewer.html  trip.html
example/cmake/: FindLibOSRM.cmake  FindTBB.cmake
examples/: CMakeLists.txt  osmium_amenity_list.cpp  osmium_area_test.cpp  osmium_change_tags.cpp  osmium_convert.cpp  osmium_count.cpp  osmium_create_node_cache.cpp  osmium_create_pois.cpp  osmium_debug.cpp  osmium_filter_discussions.cpp  osmium_index_lookup.cpp  osmium_location_cache_create.cpp  osmium_read.cpp  osmium_read_with_progress.cpp  osmium_road_length.cpp  osmium_serdump.cpp  osmium_toogr.cpp  osmium_toogr2.cpp  osmium_toogr2_exp.cpp  osmium_use_node_cache.cpp  utils.hpp  vtzero-show.cpp
fuzz/: CMakeLists.txt  driver.cc  escape_json.cc  match_parameters.cc  nearest_parameters.cc  request_parser.cc  route_parameters.cc  table_parameters.cc  tile_parameters.cc  trip_parameters.cc  uri_decode.cc  url_parser.cc  util.hpp
src/benchmarks/: CMakeLists.txt  alias.cpp  bench.cpp  json_render.cpp  match.cpp  packed_vector.cpp  portugal_to_korea.json  route.cpp  static_rtree.cpp  storage.cpp  table.cpp
src/nodejs/: CMakeLists.txt  NodeJS.cmake  json_v8_renderer.hpp  node_osrm.cpp  node_osrm_support.hpp
src/python/: CMakeLists.txt  README.md
test/: .gitignore  .stxxl  CMakeLists.txt  README  appveyor.yml  extractor.ini  hashable_test.cpp  node.js  profile.js  rastersource.asc  recursive_wrapper_test.cpp  reference_wrapper_test.cpp  server.ini  test.cpp  unique_ptr_test.cpp  unit.sh  valgrind.supp
test/behave/: environment.py
test/compilation_failure/: default_constructor.cpp  empty_typelist.cpp  equality.cpp  get_type.cpp  mutating_visitor_on_const.cpp  no-reference.cpp
test/data/: .stxxl  Makefile  country-overlap.geojson  countrytest.geojson  data.md5sum  geofabrikpoly.geojson  germany-cities.csv  kbh.osm.pbf  mapbox-streets-v6-14-8714-8017.mvt  monaco.osm.pbf  monaco.poly  tar_test.tar  tz_world.dbf  tz_world.shx  windows-build-test-data.bat
test/data-tests/: CMakeLists.txt  README.md  testdata-multipolygon.cpp  testdata-xml.cpp
test/include/: auto_cpu_timer.hpp  buffer.hpp  catch.hpp  packed_access.hpp  scalar_access.hpp  test.hpp
test/input/: looping.osm
test/nodejs/: benchmark.cjs  benchmark.js  constants.js  index.cjs  index.js  isochrone.js  match.cjs  match.js  nearest.cjs  nearest.js  osrm-data-path.js  route.cjs  route.js  table.cjs  table.js  tile.cjs  tile.js  trip.cjs  trip.js
test/osm-testdata/: CMakeLists.txt  run-testdata-multipolygon.sh  testdata-xml.cpp
test/profiles/: bicycle.lua  car.lua
test/python/: constants.py  test_index.py  test_match.py  test_nearest.py  test_route.py  test_table.py  test_tile.py  test_trip.py
test/speedprofiles/: bicycle.ini  car.ini  default.ini  ebike.ini  foot.ini
test/t/: binary_visitor_1.cpp  binary_visitor_2.cpp  binary_visitor_3.cpp  binary_visitor_6.cpp  mutating_visitor.cpp  optional.cpp  recursive_wrapper.cpp  sizeof.cpp  test_builder_linestring.cpp  test_exceptions.cpp  test_feature.cpp  test_geometry.cpp  test_geometry_linestring.cpp  test_geometry_point.cpp  test_vector_tile.cpp  unary_visitor.cpp  variant.cpp
test/unit/: test_data_view.cpp  test_endian.cpp  test_exceptions.cpp  test_iterators.cpp  test_zigzag.cpp
unit_tests/: CMakeLists.txt  contractor_tests.cpp  datastructure_tests.cpp  engine_tests.cpp  extractor_tests.cpp  io_tests.cpp  library_tests.cpp  partitioner_tests.cpp  server_tests.cpp  storage_tests.cpp  updater_tests.cpp  util_tests.cpp
unit_tests/algorithms/: douglas_peucker.cpp  geometry_string.cpp  graph_compressor.cpp  string_util.cpp
unit_tests/common/: dot_tools.hpp  random_seed.hpp  range_tools.hpp  temporary_file.hpp
unit_tests/contractor/: contracted_edge_container.cpp  files.cpp  graph_contractor.cpp  helper.hpp
unit_tests/customizer/: cell_customization.cpp  cell_update_record.cpp  grasp_customization.cpp
unit_tests/data_structures/: binary_heap.cpp  compressed_edge_container.cpp  coordinate.cpp  dynamic_graph.cpp  range_table.cpp  static_graph.cpp  static_rtree.cpp
unit_tests/engine/: base64.cpp  collapse_internal_route_result.cpp  douglas_peucker.cpp  geometry_string.cpp  guidance_assembly.cpp  guidance_collapse_distance.cpp  guidance_collapse_integration.cpp  json_factory.cpp  offline_facade.cpp  polyline_compressor.cpp  tidy.cpp  unpacking_cache.cpp
unit_tests/extractor/: car_profile_width_penalty.cpp  compressed_edge_container.cpp  graph_compressor.cpp  intersection_analysis_tests.cpp  location_dependent_data_tests.cpp  name_table.cpp  obstacle_map_tests.cpp  profile_properties.cpp  raster_source.cpp  restriction_graph.cpp  string_table.cpp  turn_lane_matcher_tests.cpp
unit_tests/fixtures/: raster_data.asc
unit_tests/mocks/: mock_datafacade.hpp  mock_scripting_environment.hpp
unit_tests/partition/: bisection_graph.cpp  bisection_graph_view.cpp  bisection_to_partition.cpp  cell_storage.cpp  dinic.cpp  graph_view.cpp  grasp_storage.cpp  multi_level_graph.cpp  multi_level_partition.cpp  recursive_bisection.cpp  remove_unconnected.cpp  renumber.cpp  reorder_first_last.cpp  scc_integration.cpp
unit_tests/partitioner/: bisection_graph.cpp  bisection_graph_view.cpp  bisection_to_partition.cpp  cell_storage.cpp  dinic.cpp  graph_generator.hpp  multi_level_graph.cpp  multi_level_partition.cpp  recursive_bisection.cpp  remove_unconnected.cpp  renumber.cpp  reorder_first_last.cpp  (+1 more)
(+3243 files in other folders)
